=======
ROADMAP
=======
TODO: V0.11.1
> Fixup the fluid grid container / fixed grid presets

TODO: V0.12.0
> Finish demo/documentation for Modals and Tipsy
> Change the helpers to be optional (add to application helper using include Jetpack::Helpers)
> Review the JS
> Create a "defaults.js" that works the same way as defaults.css
> ADD PILLS / TABS to defaults.js
> Add demo/documentation page for helpers
> Add demo/documentation page for javascripts

TODO: V0.13.0
> Clear out any remaining ideas from Wunderlist
> Redo the home page and readme

TODO: V1.0
> Finish sexy docs / demo


==========
CHANGELOG:
==========
0.11.0:
- Overhaul Interface Library. Redo button, label, message mixins.
- Add highlight, highlight-with-border, inset-text to Core.
- Remove buttonize from Core (use combinations of above mixins instead).
- Change flash_messages helper to generate "flash-message" divs instead of "alert-message" divs.
- Tweak preset success, notice, error color2's to be a little brighter. Since these are no longer
  directly used for text, it's easier to get a balance of the right
- Update table style base to not define a border, just the width etc.

0.10.1:
- Add "tint" and "shade" functions from Thoughtbot's "Bourbon."
- Use tint/shade in Buttonize mixin to avoid bright shiny color highlights

0.10.0:
- Change modal to use hyphenation, give it its own mixin.
- Remove js-styles mixin and replace with modal and tipsy mixins.
- Add full-screen and fill-container mixins to core.
- Change default border-radius from 5px to $baseline/4.
- Put downward select-arrow back for select elements.
- Add margin-right 4px for buttons
- Change a.button and span.button to default vertical align middle so they line
  up correctly next to button and input submit
- Change default $notice2 color to be not so dark
- Tweak default message styles so they're not so button-y
- Tweak default drop-shadow style to tone it down a bit

0.9.3: